# ngboost

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  Pipfile  READMATH.md  README.md  RELEASE_NOTES.md  Untitled.ipynb  base_models.py  baseline_models.R  conftest.py  evaluation.py  het.py  isort.cfg  ngboost.py  ngboost_early_stop_test_single_api.ipynb  plots.py  pyproject.toml  pytest.ini  rct_data.py  requirements.txt  scoring_rules.py  setup.cfg  setup.py  simulation_results.ipynb  simulations.py  survboost.py  tox.ini
.circleci/: config.yml
.github/: CODEOWNERS
.github/workflows/: codeql-analysis.yml  pythonpackage.yml  test.yaml
comparison/: sensitivity.ipynb  sharpness.py
data/sprint/: sprint_cut.csv
data/surv/: flchain.csv  sprint-cut.csv  support2.csv
data/uci/: kin8nm.csv  protein.csv
distns/: __init__.py  homoskedastic_log_normal.py  homoskedastic_normal.py
docs/: 0-install.html  1-useage.html  2-tuning.html  3-interpretation.html  4-saving.html  5-dev.html  conf.py  feed.xml  index.html  index.rst  intro.html  requirements.txt  search.html  sympy_distributions.md
docs/content/: 0-install.ipynb  1-useage.ipynb  2-tuning.ipynb  3-interpretation.ipynb  4-saving.ipynb  5-dev.ipynb  intro.html  intro.md
examples/: classification.py  dev_vignette.ipynb  multiclass_classification.py  multivariate_normal.py  poisson.py  regression.py  sklearn_cv.py  survival.py  vignette.ipynb
examples/BetaBernoulli/: NGBoost Beta.ipynb
examples/empirical/: clf_sklearn.py  reg_sklearn.py  regression.py  survival.py
examples/experiments/: collect_results_surv.py  regression_exp.py  survival_exp.py
examples/inspections/: Feature importance.ipynb  SHAP plots.ipynb
examples/loggers/: collect_results.py  collect_results_reg.py  loggers.py
examples/model_interpretation/: Feature_importance.ipynb  SHAP_plots.ipynb
examples/ngboost-vignette/: _config.yml
examples/simulated/: classification.py  regression.py  survival.py
examples/simulations/: regression_sim.py  survival_sim.py
examples/tuning/: hyperopt.ipynb
examples/user-guide/: Makefile  _config.yml
examples/visualizations/: .Rhistory  Feature importance_SHAP plot.ipynb  compare_convergence.py  compare_distns.py  compare_logscale.py  toy.py  toy_single.py  (+4 more)
experiments/: baseline_models.R  classification.py  cv_regression.py  empirical.py  evaluation.py  rct_data.py  regression.py  sanity_check.py  sim_experiment.py  simulations.py  time_to_event.py
figures/: toy.py  toy_single.py  vis_crps.py  vis_mle.py
ngboost/: __init__.py  api.py  censored.py  evaluation.py  helpers.py  learners.py  manifold.py  ngboost.py  ngboost_early_stop_test_single_api.ipynb  scores.py  serialization.py  shap.py  sklearn_api.py  version.py
notebooks/: example_beta.ipynb  example_betabernoulli.ipynb  example_betabinomial.ipynb  example_betabinomial_estn.ipynb  example_gamma.ipynb  example_halfnormal.ipynb  example_laplace.ipynb  example_logitnormal.ipynb  example_mixture_lognormal.ipynb  example_mixture_normal.ipynb  example_multivariate_normal.ipynb  example_normal.ipynb  example_poisson.ipynb  example_t.ipynb  example_weibull.ipynb  sympy_normal_demo.ipynb
scripts/: run_all_regression_crps.sh  run_all_regression_mle.sh  run_all_sharpness_crps.sh  run_all_sharpness_mle.sh  run_empirical_regression.sh  run_empirical_regression_homosk.sh  run_empirical_regression_ordinary.sh  run_empirical_survival.sh  run_simulations.sh
tests/: conftest.py  test_basic.py  test_distns.py  test_helpers.py  test_json_serialization.py  test_numpy2_compatibility.py  test_pickling.py  test_score.py  test_sympy_existing_distns.py  test_version.py  test_with_sklearn.py
(+209 files in other folders)
