[tool.poetry]
name = "ngboost"
version = "0.3.8dev"
description = "Library for probabilistic predictions via gradient boosting."
authors = ["Stanford ML Group <avati@cs.stanford.edu>"]
readme = "README.md"
homepage = "https://github.com/stanfordmlgroup/ngboost"
repository = "https://github.com/stanfordmlgroup/ngboost"
documentation = "https://stanfordmlgroup.github.io/ngboost/intro"
classifiers = [
    "Operating System :: OS Independent"
]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = ">=3.6, <4.0"
scikit-learn = ">=0.21"
numpy = ">=1.17"
scipy = ">=1.3"
tqdm = ">=4.3"
lifelines = ">=0.25"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
pre-commit = "^2.0"
isort = "^5.6.4"
pylint = "^2.6.0"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
