[tool.poetry]
name = "ngboost"
version = "0.5.7"
description = "Library for probabilistic predictions via gradient boosting."
authors = ["Stanford ML Group <avati@cs.stanford.edu>"]
readme = "README.md"
homepage = "https://github.com/stanfordmlgroup/ngboost"
repository = "https://github.com/stanfordmlgroup/ngboost"
documentation = "https://stanfordmlgroup.github.io/ngboost/intro"
classifiers = [
    "Operating System :: OS Independent"
]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = ">=3.9, <3.14"
scikit-learn = "^1.6"
numpy = [
    {version = ">=1.21.2", markers = "python_version < '3.13'"},
    {version = ">=2.1.0", markers = "python_version >= '3.13'"}
]
scipy = [
    {version = ">=1.7.2", markers = "python_version < '3.13'"},
    {version = ">=1.14.1", markers = "python_version >= '3.13'"}
]
tqdm = ">=4.3"
lifelines = ">=0.25"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
pre-commit = "^4.0.0"
isort = "^5.13.0"
pylint = "^3.2.0"
flake8 = "^7.1.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
